<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="@dimen/height_2_100"
    android:background="@drawable/linearlayout"
    android:orientation="vertical" 
    android:id="@+id/ll_jgjf">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/custom_fragment_tt" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sliding_title_11"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#3293DB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_1_100"
        android:layout_marginTop="@dimen/height_2_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fafangjigou"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@+id/tv_jgjf_item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="360121100001-140527-00003"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_1_100"
        android:layout_marginTop="@dimen/height_1_100"
        android:background="@drawable/bg_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_1_100"
        android:layout_marginTop="@dimen/height_1_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fafangren"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@+id/tv_jgjf_item_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/search_apply_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_1_100"
        android:layout_marginTop="@dimen/height_1_100"
        android:background="@drawable/bg_divider" />

   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_1_100"
        android:layout_marginTop="@dimen/height_1_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/search_fafangriqi"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@+id/tv_jgjf_item_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/search_apply_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_1_100"
        android:layout_marginTop="@dimen/height_1_100"
        android:background="@drawable/bg_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_1_100"
        android:layout_marginTop="@dimen/height_1_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/qianshouren"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@+id/tv_jgjf_item_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/search_apply_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_1_100"
        android:layout_marginTop="@dimen/height_1_100"
        android:background="@drawable/bg_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/height_1_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/qianshourenshenfenzheng"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <TextView
            android:id="@+id/tv_jgjf_item_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/search_apply_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/height_1_100"
        android:layout_marginRight="@dimen/height_1_100"
        android:layout_marginTop="@dimen/height_1_100"
        android:background="@drawable/bg_divider" />

    <LinearLayout
        android:id="@+id/linearlayout_jgjf"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/height_1_100"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/jieguojiaofu"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small_size" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/btn_detail_jgjf_spcgcl"
                android:layout_width="@dimen/width_15_100"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/height_1_100"
                android:layout_marginRight="@dimen/width_6_100"
                android:background="@drawable/btn_search_fj"
                android:contentDescription="@string/_name"
                android:gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>